Fix Opensilex start command